# chatshell

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LLM_INTEGRATION.md  PROMPT_FIX_SUMMARY.md  README.md  TESTING_STATUS_REPORT.md
src/: config.rs  hooks.rs  lib.rs  llm.rs  main.rs  pty.rs  terminal.rs  window.rs
tests/: benchmark_tests.rs  debug_helper.sh  integration_tests.rs  manual_test_script.sh  property_tests.rs
