[package]
name = "chatshell"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
nix = { version = "0.27", features = ["process", "signal", "term"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
libc = "0.2"
chrono = "0.4"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = "0.3" 